networkPolicies/00-default-deny-ingress-bulletin.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: bulletin

spec:
  podSelector: {}

  policyTypes:
    - Ingress
