networkPolicies/03-allow-backend-to-minio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-backend-to-minio
  namespace: bulletin

spec:
  podSelector:
    matchLabels:
      app: minio

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend

      ports:
        - protocol: TCP
          port: 9000
